rm screenshots, mastodon stopgap

--- a/_sass/desktop.scss
+++ b/_sass/desktop.scss
@@ -12,7 +12,7 @@
   }
   .w {
     background: var(--bg-secondary-opaque);
-    max-width: 60vw;
+    max-width: 56vw;
     // min-height: 80vh;
     border-radius: 4rem;
     border: 0.5rem solid #74c0fc;
